--- a/Piano2Guitar/Pages/Home.razor
+++ b/Piano2Guitar/Pages/Home.razor
@@ -3,48 +3,59 @@
 @using Piano2Guitar.Models;
 @using Piano2Guitar.Services
 
-<PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<div class="piano">
+<div class="pianoContainer">
     @foreach (var note in pianoNotes)
     {
-        <button @onclick="() => UpdateCurrentNote(note)" class="tecla">
+        <button 
+            @onclick="() => UpdateCurrentNote(note)" 
+            class=@(!note.EsSostenida ? "pianoKey" : "pianoKeySharp")
+                style="@(currentNote != null && note == currentNote ? $"background-color: {selectColor};" : $"background-color: {octaveColors[note.EsSostenida ? 0 : note.Octava - 1]};")">
             @note.Nombre
         </button>
     }
 </div>
 
-<hr />
+<div class="guitarContainer">
 @for (int cuerda = 0; cuerda < 6; cuerda++)
 {
-    for (int traste = 0; traste < 15; traste++)
+    <hr />
+    <div class="guitarContainer_string">
+    @for (int traste = 0; traste < 25; traste++)
     {
-        <button class="tecla" style="@(currentNote != null && guitarFretboard[cuerda, traste] == currentNote ? "background-color: red;" : "")">
+        <button 
+            class="guitarKey"
+                        style="@(currentNote != null && guitarFretboard[cuerda, traste] == currentNote ? $"background-color: {selectColor};" : $"background-color: {octaveColors[guitarFretboard[cuerda, traste].EsSostenida ? 0 : guitarFretboard[cuerda, traste].Octava - 1]};")">
             @if(guitarFretboard[cuerda, traste] != null)
             {
                 @guitarFretboard[cuerda, traste].Nombre;
             }
         </button>
     }
-    <hr/>
+    </div>
 }
+</div>
 
 @if (currentNote != null)
-{   
-    <p>@currentNote.Nombre</p>
-    <p>@currentNote.Octava</p>
+{
+    <p>Note: @currentNote.Nombre @currentNote.Octava</p>
 }
 
-
-
 @code {
+    private string selectColor = "red";
+    private string[] octaveColors = new string[]
+    {
+        "#2c3e50",
+        "#2ecc71",
+        "#3498db",
+        "#9b59b6",
+        "#f1c40f",
+        "#EA8FEA"
+    };
+
     private Note currentNote = null;
     private List<Note> pianoNotes = new List<Note>();
-    private Note[,] guitarFretboard = new Note[6, 15];
+    private Note[,] guitarFretboard = new Note[6, 25];
 
     protected override void OnInitialized()
     {
